--- a/Day-2task resume.html
+++ b/Day-2task resume.html
@@ -4,9 +4,11 @@
 <body>
 <table border='1' align="center" width="100%">
 	<th> <h1> RESUME! </h1> <th>
+
 	<tr> <th align = "left"  > <h2> <u> SHAIK GOUSE RABBANI </u></h2> 
 	Mobile No : +916303895042<br><br>
 	Email Address : gouse.shahib@gmail.com<br><br>
+	
 	<h2><u>PERSONAL PROFILE</u> </h2>
 	<ul>
 	<li>Father Name    : Shaik Chan Basha</li>
@@ -18,6 +20,7 @@
 	<li>Languages Known: Telugu,Hindhi,English</li>
 	<li>Hobbies        : Cooking,Daily workouts,playing badmenton  </li>
 </ul>
+
      <h2><u> OBJECTIVE </u></h2>
      <p> A focused,ambitious engineering student seeking an oppertunity to utilize my educational skills in an environment which can provide me myriad for both personal and professional development.</p>
      <h2><u>EDUCATION</u></h2><ul>
@@ -33,8 +36,8 @@
      	<li>I got certificate from JNTUK UNIVERSITY for participating in C-ZONE for playing badmenton from our clg.  </li>
      	<li>I got firstprize in jam,technical quiz,gk quiz</li>
      	<li>I got secondprize in vivekananda quiz </li>
-     	<li>I get first prize in chess </li>
-     	<li>I get many participation certificates from different collages for taking part in many events.</li>
+     	<li>I got first prize in chess </li>
+     	<li>I got many participation certificates from different collages for taking part in many events.</li>
      </ul>
      <h2><u>PROJECTS</u></h2>
      <ul>
@@ -45,15 +48,10 @@
      <ul>
      	<p>I do hereby declare that the above particular information stated are facts and true,correct complete to the best of  my knowledge and belief.   </p>
      </ul>
-     <P align="left corner">SK.GOUSE RABBANI</P>
-    
-
-
-
-
-
-</th>
+     <P style="text-align:right; margin-right: 50px">SK.GOUSE RABBANI</P>
+ </th>
 </tr>
+
 </table>		
 </body>
 
